--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-streamlit==1.18.0
-pandas==1.3.3
-numpy==1.21.2
-plotly==5.5.1
-matplotlib==3.4.3
-scikit-learn==0.24.2
-category-encoders==2.3.0
+streamlit
+plotly
+matplotlib
+scikit-learn
+category-encoders
 
