--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-streamlit==1.5.3
-pandas==1.3.3
-numpy==1.21.2
-seaborn==0.12.2
-plotly==5.3.1
-matplotlib==3.4.3
-scikit-learn==0.24.2
-category-encoders==2.3.0
+category-encoders==2.2.2
+matplotlib
+numpy
+pandas
+plotly
+scikit-learn
+seaborn
+streamlit
+
